Signed-off-by: Merxado <daviyimer1345@outlook.com>

--- a/C.Biblioteca/registro_profesor.html
+++ b/C.Biblioteca/registro_profesor.html
@@ -8,11 +8,25 @@
     <link rel="stylesheet" href="prueba.css">
 </head>
 <body>
-    <h1>hola</h1>
-    <h2>hola</h2>
-    <h3>hola</h3>
-    <h4>hola</h4>
-    <h5>hola</h5>
-    <h6>hola</h6>
+    <div class="form-floating mb-3">
+        <input class="form-control" type="text" name="tacademico">
+        <label for="tacademico">Titulo academico</label>
+      </div>
+      
+      <div class="form-floating mb-3">
+        <input class="form-control" type="number" name="telefono">
+        <label for="telefono">Teléfono</label>
+      </div>
+      
+      <div class="form-floating mb-3">
+        <input class="form-control" type="text" name="barrio">
+        <label for="barrio">Barrio</label>
+      </div>
+
+      <input type="submit" value="Enviar">
+    </form>
+  </div>
+</div>
+</div>
 </body>
 </html>
