--- a/C.Biblioteca/main.html
+++ b/C.Biblioteca/main.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html>
+<head></head>
     <title>Document</title>
 </head>
 <body>
-    <div></div>
+    <header>
+        <h1 id="titulo">Biblioteca I.E Villa Nueva</h1>
+    </header>
+    <div class="titulo1">
+        <p>parrafo feo</p>
+    </div>
+    <section>
+        <article>
+            <h2>Libros</h2>
+            <p>Descripcion</p>
+            <img src="imagenes/zzz.jpg" width="400" />
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel eligendi commodi neque molestias nihil ex qui fugit ipsa cum, distinctio nulla vitae? Libero at animi qui sunt quas officia sint!</p>
+        </article> 
+        <article>
+            <h2>Cochinadas</h2>
+            <p>Descripcion</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel eligendi commodi neque molestias nihil ex qui fugit ipsa cum, distinctio nulla vitae? Libero at animi qui sunt quas officia sint!</p>
+        </article>
+    </section>
+    <footer>
+        <a href="#titulo">Subir pa rriba</a>
+        <a target="_blank" href="https://www.facebook.com/">Contacteme :3</a>
+    </footer>
 </body>
 </html>
